--- a/estilo.css
+++ b/estilo.css
@@ -1,23 +1,30 @@
 html,body{
     margin: 0;
+    background-color:#EEEEEE;
 
 }
 /*CABEÇALHO DO SITE*/
 header {
-    width: 100%;
-    height: 60px;
+    /*width: 100%;
+    height: 60px;*/
     background:#262626;
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    z-index: 50;
+    /*position: relative;
     position: fixed;
     display: block;
+    z-index: 1000;*/
 } 
 #logo img{
+    width: 210px;
+    position: absolute;
     padding-top: 5px;
     padding-left: 50px;
-    padding-right: 500px;
-    float:left;
-    width: 210px;
-    position: relative;
+    /*padding-right: 500px;*/
 }
+
 #menu{
     float: right;
     margin-top: 0;
@@ -29,9 +36,6 @@ header {
 li{
     float: left;
     padding: 20px 20px 18px 20px;
-    list-style-type:none;
-
-
 }
 li a{
     font-size: 110%;
@@ -40,19 +44,17 @@ li a{
     color: white;
     text-decoration: none;
 }
+
 li:hover{
     background-color: #DC4C4C;
 }
 
 /*Primeira Sessão [Porquê]*/
-#fundo{ /*Background*/
-    background-position: center;
+#imagem_fundo{ /*Background*/
     background-image: url(img/fundo.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
     height: 100%;
     padding: 10px;
-    z-index:1;
 }
 
 #botao{
@@ -60,8 +62,7 @@ li:hover{
     font-family: 'Staatliches', cursive;
     color: #F2F2F2;
     transform: translateY(-215%);
-    padding-left: 85%;
-    float: left;
+    /*padding-left: 85%;*/
     text-decoration: none;
 }
 #setadupla{
@@ -72,28 +73,31 @@ li:hover{
     z-index: 2;
 }
 
+section{
+    padding: 20px;
+    padding-top: 60px;
+    float: left;
+    text-align: center;
+}
+
 /*Se refere ao menu que contem setas e uma linha no meio que ficam nas paginas*/
-#menu_linha
+/*#menu_linha
 {
     position: absolute;
     transform: translateY(-140%) translateX(4240%);
 
-}
-#menu_flecha_bot{
+}*/
+/*#menu_flecha_bot{
     position: absolute;
     transform: translateY(-140%) translateX(4240%);
-}
+}*/
 
 /*Segunda Sessão [Metas]*/
-#porque{
-    width: 100%;
-    height: 100%;
-    background-color: #EEEEEE
-}
 
-.coluna{
+
+/*.coluna{
     float: left;
-    position: relative;/*posição do elemento (div), vai variar, com base no elemento, que vem anteriormente (div ao lado esquerdo)*/    
+    position: sticky;/*posição do elemento (div), vai variar, com base no elemento, que vem anteriormente (div ao lado esquerdo)    
 }
 
 .dois{
@@ -105,39 +109,66 @@ li:hover{
 }
 
 .quatro{
+    text-align: center;
     width: 15%;
-    transform: translateY(-20%);
     padding-left: 5%;
     padding-right: 5%;
     display: inline-block;
+}*/
+
+.coluna{
+    float: left;
+    padding: 0 5%;
+    position: relative;    
 }
+
+.dois{
+    width: 40%;
+}
+
+.tres{
+    width: 29%;
+    padding: 0 2%;
+}
+
+.quatro{
+    width: 15%;
+}
+
 /*Terceira Sessão [Metas]*/
 
 .icone{
-    width:100px;
-    height:100px;
+    /*text-align: center;*/
+    width:150px;
+    /*height:150px;
     position:absolute;
     top:10%;
     left:50%;
     margin-top: 5%px;
-    margin-left:-50px;
+    margin-left:-50px;*/
 }
 
 /*Quarta Sessão [Causas]*/
+#porque{
+    background-color: #EEEEEE;
+}
+
 #causas{
     background-color: #101010;
-    width: 100%;
-    height: 100%;
+    /*width: 100%;
+    height: 100%;*/
+}
+
+#consequencias{
+    background-color: #EEEEEE;
 }
 .img_poluente{
-    transform: translateY(20%);
-    margin-left: 5%;
-    background-color: rebeccapurple;
-    width: 260;
+    /*width: 260;*/
     height: 370px;
-    float: left;
-    align-content: center;
+    /*float: left;*/
 }
+
+
 footer{
     background-color:#262626;
     color: white;
@@ -145,31 +176,51 @@ footer{
     width: 100%;
     text-align: center;
 }
-.fundo_branco{
-    width: 100%;
-    height: 100%;
+/*.fundo_branco{
     background-color: #EEEEEE;
 
+}*/
+
+#sobre img{
+    width: 100%;
 }
 
 @media all and (max-width: 768px){
     #menu{
         visibility: hidden;
     }
+
+    .coluna, .dois, .tres, .quatro{
+        display: block;
+        width: 80%;
+        padding: 0;
+        margin: 10px auto;
+        float: none;
+    }
+
+    #logo{
+        text-align: center;
+        
+    }
+
+    #logo img{
+        margin-left: 0;
+        padding-left: 0;
+        padding-right: 0;
+        position: relative;
+    }
 }
 
-.coluna, .dois, .tres, .quatro{
-    display: block;
-    width: 80%;
-    padding: 0;
-    margin: 10px auto;
-    float: none;
+.icone:hover
+{
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
-#logo{
-    text-align: center;
-}
-#logo img{
-    margin-left: 0;
-    position: relative;
+.img_poluente:hover
+{
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
